--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
     </script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+
+    <p>Thanks for visiting!</p>
 </body>
 </html>
