Changed High to High in next 3 hours

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <td class="${tempClass}">${temp}°F</td>
                         </tr>
                         <tr>
-                            <td>High Temperature:</td>
+                            <td>High in next 3 hours:</td>
                             <td>${tempHigh}°F</td>
                         </tr>
                         <tr>
