--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container text-center">
-        <h1>Fort Wayne Weather Information</h1>
+        <h1>Fort Wayne Weather Information!</h1>
         <div id="weather-info">
             <!-- Weather information will be displayed here -->
         </div>
