--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <div class="container text-center">
         <h1>Fort Wayne Weather Information!</h1>
+        <div style="margin-top: 20px;">
+            <a href="Calculators.html" class="btn btn-primary">Go to Calculators</a>
+        </div>
         <div id="weather-info">
             <!-- Weather information will be displayed here -->
         </div>
