--- a/Calculators.html
+++ b/Calculators.html
@@ -7,6 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
         .container {
             max-width: 800px;
@@ -22,23 +25,49 @@
         label, input {
             display: block;
             margin-bottom: 10px;
+            width: 100%;
+        }
+        input {
+            padding: 10px;
+            font-size: 1em;
         }
         button {
             margin-top: 10px;
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            width: 100%;
+            border: none;
+            background-color: darkgreen;
+            color: white;
+            border-radius: 5px;
         }
         h1 {
             font-size: 1.8em;
             color: darkgreen;
             margin-bottom: 20px;
+            text-align: center;
         }
         h2 {
             font-size: 1.4em;
             color: rgb(71, 109, 71);
             margin-bottom: 20px;
+            text-align: center;
         }
         .result {
             font-weight: bold;
             color: green;
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 10px;
+            }
+            h1, h2 {
+                font-size: 1.5em;
+            }
+            button {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
@@ -48,7 +77,7 @@
         <div class="calculator">
             <h2>Regulation Z APR Lookup by Interest Rate</h2>
             <p>
-                <i>Note: This calculator is designed for 6Pay, which is made in 5 payments, and for interest rates between 2% and 40.</i>
+                <i>Note: This calculator is designed for 6Pay, which is made in 5 payments, and for interest rates between 2% and 40%.</i>
             </p>
             <label for="interest-rate">Interest Rate (%)</label>
             <input type="number" id="interest-rate" step="0.01">
@@ -64,7 +93,7 @@
         </div>
         
         <h2>Determine Minimum Amount Financed</h2>
-        <p>To determine the minimum amount financed pursuant to State Usuray laws, enter the total <b>finance charge (I)</b>, 
+        <p>To determine the minimum amount financed pursuant to State Usury laws, enter the total <b>finance charge (I)</b>, 
             the <b>annual interest rate (r)</b> as a percentage, and the <b>repayment term in months (n)</b>:</p>
         <p></p>
         <i>Note: This calculator assumes equal monthly payments.</i>
