Add "Finance" to "Calculators" Button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container text-center">
         <h1>Fort Wayne Weather Information!</h1>
         <div style="margin-top: 20px;">
-            <a href="Calculators.html" class="btn btn-primary">Go to Calculators</a>
+            <a href="Calculators.html" class="btn btn-primary">Go to Finance Calculators</a>
         </div>
         <div id="weather-info">
             <!-- Weather information will be displayed here -->
